--- a/package.json
+++ b/package.json
@@ -14,17 +14,22 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.4",
     "@prisma/client": "^4.16.1",
+    "@tanstack/react-query": "^4.29.19",
     "@types/node": "^20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "form": "^0.2.4",
     "mongodb": "5.6",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook": "^0.0.1",
+    "react-hook-form": "^7.45.1",
     "react-icons": "^4.9.0",
     "react-tooltip": "^5.14.0",
     "tailwindcss": "3.3.2",
