--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "classnames": "^2.3.2",
     "form": "^0.2.4",
     "mongodb": "5.6",
-    "next": "13.4.4",
+    "next": "^13.4.7",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
