--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.13.4",
     "@prisma/client": "^4.16.1",
     "@tanstack/react-query": "^4.29.19",
+    "@tanstack/react-table": "^8.9.3",
     "@types/node": "^20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
@@ -22,6 +23,7 @@
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "form": "^0.2.4",
+    "luxon": "^3.4.0",
     "mongodb": "5.6",
     "next": "^13.4.7",
     "next-auth": "^4.22.1",
@@ -37,6 +39,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/luxon": "^3.3.1",
     "@types/uuid": "^9.0.1",
     "encoding": "^0.1.13",
     "prisma": "^4.16.1"
