--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "react-hook": "^0.0.1",
     "react-hook-form": "^7.45.1",
-    "react-icons": "^4.9.0",
+    "react-icons": "^4.10.1",
     "react-tooltip": "^5.14.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@types/luxon": "^3.3.1",
+    "@types/react-datepicker": "^4.15.0",
     "@types/uuid": "^9.0.1",
     "encoding": "^0.1.13",
     "prisma": "^4.16.1"
