added image employee image upload

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "firebase": "^10.3.0",
     "form": "^0.2.4",
     "luxon": "^3.4.1",
     "mongodb": "5.6",
@@ -29,6 +30,7 @@
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-avatar-editor": "^13.0.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "react-hook": "^0.0.1",
