--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongodb": "5.6",
     "next": "^13.4.7",
     "next-auth": "^4.22.1",
+    "pg-promise": "^11.5.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-avatar-editor": "^13.0.0",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@types/luxon": "^3.3.1",
+    "@types/pg-promise": "^5.4.3",
     "@types/react-datepicker": "^4.15.0",
     "@types/uuid": "^9.0.1",
     "encoding": "^0.1.13",
