--- a/package.json
+++ b/package.json
@@ -25,10 +25,9 @@
     "firebase": "^10.3.0",
     "form": "^0.2.4",
     "luxon": "^3.4.1",
-    "mongodb": "5.6",
     "next": "^13.4.7",
     "next-auth": "^4.22.1",
-    "pg-promise": "^11.5.4",
+    "pg": "^8.11.3",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-avatar-editor": "^13.0.0",
@@ -44,6 +43,7 @@
   },
   "devDependencies": {
     "@types/luxon": "^3.3.1",
+    "@types/pg": "^8.10.2",
     "@types/pg-promise": "^5.4.3",
     "@types/react-datepicker": "^4.15.0",
     "@types/uuid": "^9.0.1",
